--- a/EVMS_FE/src/index.css
+++ b/EVMS_FE/src/index.css
@@ -1,3 +1,3 @@
 @import "tailwindcss";
-@import "./constants/color/color.css";
-@import "./constants/theme/theme.css"
+@import "./constants/color.css";
+@import "./constants/theme.css"
